Fix better contrast on blockqoute text color

--- a/plugins/reAdjust/design/readjust.css
+++ b/plugins/reAdjust/design/readjust.css
@@ -150,7 +150,7 @@
  ==============================================================================
  */
 .Message blockquote {
-    color: #767676;
+    color: #4c4c4c;
 }
 .Message blockquote p {
     font-size: inherit;
